--- a/templates/share_link/subscribe.html.twig
+++ b/templates/share_link/subscribe.html.twig
@@ -63,6 +63,8 @@
             {{ form_row(form.email) }}
             {{ form_row(form.address) }}
             {{ form_row(form.phone) }}
+            {{ form_row(form.freeFields) }}
+
             <div class="row form-group">
 
                 <div class="col-12">
