--- a/templates/base/__newRoomModal.html.twig
+++ b/templates/base/__newRoomModal.html.twig
@@ -179,7 +179,7 @@
                                    data-content="{{ 'Hier können Sie freie Felder definieren. Diese können von den Teilnehmern während des Anmelddevorgangs ausgefüllt werden'|trans }}"><i
                                             class="fa fa-question-circle"></i></a><br>
                                 <ul class="freeField list-group"
-                                    data-prototype="<div class='row'><div class='col-lg-12'>{{ form_widget(form.freeFields.vars.prototype.label)|e('html_attr') }}</div><div class='col-lg-12'>{{ form_widget(form.freeFields.vars.prototype.required)|e('html_attr') }}</div></div>">
+                                    data-prototype="<div class='d-flex flex-column'>{{ form_widget(form.freeFields.vars.prototype.label)|e('html_attr') }}{{ form_widget(form.freeFields.vars.prototype.required)|e('html_attr') }}</div>">
                                     {% for freeField in form.freeFields %}
                                         <li class="d-inline-block list-group-item d-flex justify-content-between">
                                             <div class="row">
