--- a/templates/base/__footer.html.twig
+++ b/templates/base/__footer.html.twig
@@ -16,9 +16,7 @@
                    href="https://github.com/open-event-manager/open-event-manager/issues">{{ 'Fehler oder neue Idee melden'|trans }}</a>
             </li>
             <li class="nav-item d-none d-xl-block">
-                <a class="nav-link" target="_blank" referrerpolicy="no-referrer"
-                   href="https://h2-invent.com/">Made with ❤ by H2 invent • {{ 'now'|date('Y') }}
-                    • v{{ laf_version }}</a>
+                <a href="https://h2-invent.com" target="_blank" referrerpolicy="no-referrer" class="small">Made with ❤ by H2 invent</a><a class="small" target="_blank" referrerpolicy="no-referrer" href="https://readi.de/"> and re@di</a><a href="https://h2-invent.com" target="_blank" referrerpolicy="no-referrer" class="small"> • 2019-{{ 'now'|date('Y') }} • v{{ laf_version }}</a>
             </li>
             {% if matomo_enable == 'true' %}
             <li class="nav-item">
