now a list of a date range can be exported with all avents and all participants

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -23,7 +23,9 @@
                     </div>
 
                 </div>
+                <a href="{{ path('day_list_modal') }}" class="loadContent"><i class="fa fa-print"></i> </a>
             </div>
+
         </div>
     </div>
     <div class="container">
