--- a/templates/day_list/index.html.twig
+++ b/templates/day_list/index.html.twig
@@ -1,4 +1,29 @@
+<div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
 
-{% block title %}Hello DayListController!{% endblock %}
+        <div class="modal-header  light-blue darken-3 white-text">
+            <h5 class="modal-title">{{ title }}</h5>
+            <button style="color: white" type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">×</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form action="{{ path('day_list') }}">
+                <div class="row">
 
-
+                    <div class="col-lg-6">
+                        <label for="day_list_date_from">Von</label>
+                        <input id="day_list_date_from" placeholder="" type="date" class="form-control" name="from">
+                    </div>
+                    <div class="col-lg-6">
+                        <label for="day_list_date_to">Bis</label>
+                        <input id="day_list_date_to" type="date" class="form-control" name="to">
+                    </div>
+                    <div class="col-lg-12">
+                        <button type="submit" class="btn btn-primary">Download</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
