--- a/templates/email/removeRoom.html.twig
+++ b/templates/email/removeRoom.html.twig
@@ -15,6 +15,16 @@
           Sie wurden von der Teilnehmerliste des Events: {name} entfernt. Dieses Event  kann aus dem Kalender entfernt werden.
         {% endtrans %}
     </p>
+    <b>{{ 'Anmeldedaten'|trans }}</b>
+    <ul>
+    <li><b>{{ 'Name'|trans }}:</b> {{ user.firstName }} {{ user.lastName }}
+    <li><b>{{ 'E-Mail'|trans }}:</b> {{ user.email }}
+    <li><b>{{ 'Adresse'|trans }}:</b> {{ user.address }}
+    <li><b>{{ 'Telefon'|trans }}:</b> {{ user.phone }}
+    {% for ff in user.freeFieldsFromRoom(room) %}
+    <li><b>{{ ff.freefield.label }}:</b> {{ ff.answer }}<br>
+    {% endfor %}
+    </ul>
     <b>
         {{ 'Name'|trans }}: {{ room.name }}
     </b>
