--- a/templates/email/__roomInfo.html.twig
+++ b/templates/email/__roomInfo.html.twig
@@ -58,7 +58,7 @@
 
 
 <p>
-    {% if standort is defined and  standort is not null and standort|validateLicense and standort.serverEmailBody is not null %}
+    {% if standort is defined and  standort is not null and standort.serverEmailBody is not null %}
         {{ standort.serverEmailBody|nl2br }}
     {% endif %}
 </p>
