change security to authenticator and make OEM KC19 ready

--- a/templates/base/__profileModal.html.twig
+++ b/templates/base/__profileModal.html.twig
@@ -35,7 +35,7 @@
             </div>
 
             <div class="modal-footer">
-                <a href="{{ path('app_logout') }}" class="btn btn-danger btn-sm">{{ 'Logout'|trans }}</a>
+                <a href="{{ path('logout_keycloak') }}" class="btn btn-danger btn-sm">{{ 'Logout'|trans }}</a>
             </div>
         </div>
     </div>
