--- a/templates/base/__topnav.html.twig
+++ b/templates/base/__topnav.html.twig
@@ -54,7 +54,7 @@
         <!-- Basic dropdown -->
 
         <!-- Basic dropdown -->
-        <a href="{{ path('app_logout') }}"><img src="{{ asset('images/logout.svg') }}" class="iconSytle"
+        <a href="{{ path('logout_keycloak') }}"><img src="{{ asset('images/logout.svg') }}" class="iconSytle"
                                                 title="{{ 'Logout'|trans }}"></a>
 
     </div>
